--- a/client/src/styling/App.css
+++ b/client/src/styling/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  z-index: 888;
 }
 
 .App-logo {
@@ -10,11 +11,13 @@
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
+
   }
+  
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #DDE6ED;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
