--- a/client/src/styling/Navbar.css
+++ b/client/src/styling/Navbar.css
@@ -1,12 +1,15 @@
 /* Main navbar styles */
 .navBar {
-  background-color: burlywood;
+  background-color: #27374D;
   overflow: hidden;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-between;;
   align-items: center;
-  padding: 10px 20px;
-  position: relative;
+  position: fixed;
+  height: 80px; /* Increase the height of the navbar */
+  width: 100%;
+  z-index: 888;
+
 }
 
 .navBar ul {
@@ -14,7 +17,18 @@
   margin: 0;
   padding: 0;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between; /* Distribute items evenly */
+  height: 100%; /* Make sure ul takes the full height of the navbar */
+  width: 100%; /* Ensure full width */
+}
+
+.navBar li {
+  margin: 0; /* Ensure there is no margin on li elements */
+  padding: 0; /* Ensure there is no padding on li elements */
+  height: 100%; /* Make sure li takes the full height of the navbar */
+  display: flex; /* Align items to the center */
+  align-items: center;
+  flex: 1; /* Equal width distribution */
 }
 
 .navBar li a {
@@ -22,11 +36,13 @@
   text-align: center;
   text-decoration: none;
   display: block;
-  padding: 24px 30px;
+  padding: 0 20px; /* Adjust horizontal padding */
+  height: 100%; /* Make sure a takes the full height of the navbar */
+  line-height: 80px; /* Align text vertically */
 }
 
 .navBar li a:hover {
-  background-color: #575757;
+  background-color: #9DB2BF;
 }
 
 /* Navbar toggle button for mobile view */
@@ -42,30 +58,53 @@
   z-index: 1000; /* Ensure it's on top */
 }
 
+.navbar-brand{
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding-left: 30px;
+  color: white; /* Ensure the brand name is visible */
+  text-decoration: none;
+}
+
 /* Media query for mobile view */
 @media (max-width: 768px) {
   .navbar-links {
     position: fixed;
-    top: 0;
+    top: 80px; /* Match this with the height of .navBar */
     left: 0;
-    height: 100%;
-    width: 70%;
-    background-color: #333;
-    transform: translateX(-100%);
+    height: 60%;
+    width: 100%;
+    background-color: #27374D;
+    transform: translateY(calc(-100% - 80px)); 
     transition: transform 0.3s ease-in-out;
     z-index: 999;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-  }
+    opacity: 0;
+    visibility: hidden; /* Hide by default */
 
+  }
+  
   .navbar-links.active {
-    transform: translateX(0);
+    transform: translateY(0);
+    opacity: 1;
+    visibility: visible; /* Show the links */
   }
 
   .navbar-links ul {
     flex-direction: column;
-    padding: 20px;
+    width: 100%;
+    align-items: center;
+  }
+
+
+  .navbar-links li {
+    width: 100%;
+    text-align: center;
+  }
+
+  .navbar-links li a {
     width: 100%;
   }
 
